= Version History =

x.x:

- fixed: forgot to commit input/access not saving settings

1.1 (2013-09-30):

- added: menu_builder special context to the input/access exceptions
- fixed: group_tools default access was causing problems

1.0 (2013-07-31):

- first release